# openocd

./: .checkpatch.conf  .gitignore  .gitmodules  .travis.yml  AUTHORS  BUGS  COPYING  ChangeLog  Doxyfile  Doxyfile.in  HACKING  INSTALL  Makefile.am  NEWS  NEWS-0.11.0  NEWS-0.12.0  NEWS-0.5.0  NEWTAPS  PATCHES  PATCHES.txt  README  README.OSX  README.Win32  README.Windows  README.Windows.md  README.macOS  README.macOS.md  README.md  TODO  bootstrap  common.mk  config_subdir.m4  configure.ac  configure.in  configure.sh  guess-rev.sh  openocd_cmsis.code-workspace  uncrustify.cfg
doc/: .gitattributes  INSTALL.txt  Makefile.am  README_TARGET_COMMAND.txt  fdl.texi  openocd.1  openocd.texi
doc/configs/: arm7_ft2232.cfg  arm7_ftd2xx.cfg  arm7_wig.cfg  arm9_ft2232.cfg  arm9_ftd2xx.cfg  at91sam7_ecr.cfg  chameleon.cfg  fury_ft2232.cfg  usbprog.cfg  xscale_ixp42x.cfg
doc/manual/: app.txt  config_files.txt  endianness.txt  flash.txt  helper.txt  jtag.txt  main.txt  release.txt  scripting.txt  server.txt  style.txt  target.txt
doc/manual/primer/: autotools.txt  commands.txt  docs.txt  jtag.txt  patches.txt  tcl.txt
doc/scripts/: at91sam7_ecr.script  tms470r1a288_startup.script  xscale_ixp_startup.script
doc/usb_adapters/: dump.sh  readme.txt
doc/usb_adapters/angie/: 584e_414f_angie.txt  584e_424e_angie.txt
doc/usb_adapters/ch347/: 1a86_55dd_easydevkit.txt
doc/usb_adapters/cmsis_dap/: 03eb_2111_atmel_edbg.txt  03eb_2169_atmel_edbg.txt  04b4_f155_cypress_kitprog3.txt  0d28_0204_nxp_daplink.txt  1a6a_2000_spansion_sk_fm4.txt  2a86_8011_wch_link.txt  c251_2722_keil_ulink2.txt  c251_2723_keil_ulink_me.txt  c251_2750_keil_ulinkplus.txt  c251_f001_jixin.pro.txt
doc/usb_adapters/esp_usb_jtag/: 303a_1001_esp_usb_jtag.txt
doc/usb_adapters/ft232r/: 0403_6001_ft232r.txt
doc/usb_adapters/ftdi/: 0403_6010_ft2232h.txt  0403_6014_digilent_hs2.txt  0403_cff8_amontec_jtagkey2.txt  09fb_6001_altera_blaster.txt  9e88_9e8f_sheevaplug_jtagkey.txt
doc/usb_adapters/icdi/: 1cbe_00fd_ti_icdi.txt
doc/usb_adapters/jlink/: 1366_0101_segger_jlink.txt  1366_0101_segger_jlink_plus_10_1.txt
doc/usb_adapters/kitprog/: 04b4_f139_cypress_kitprog.txt
doc/usb_adapters/nulink/: 0416_511d_nuvoton_nulink.txt  0416_5200_nuvoton_nulink.txt
src/: Makefile.am  bin2char.c  ecosboard.c  file2c.tcl  hello.c  hello.h  jim.c  jim.h  main.c  non-arm-targets.txt  openocd.c  openocd.h  openocd_tcl.h  scripting.txt  startup.tcl
src/flash/: FLASHPlugin.c  Makefile.am  aduc702x.c  advanced_elf_image.c  advanced_elf_image.h  arm_nandio.c  arm_nandio.h  at91sam3.c  at91sam3.h  at91sam7.c  at91sam7.h  at91sam7_old.c  at91sam7_old.h  avrf.c  avrf.h  cfi.c  cfi.h  common.c  common.h  davinci_nand.c  ecos.c  faux.c  flash.c  flash.h  lpc2000.c  lpc2000.h  lpc288x.c  lpc288x.h  lpc2900.c  lpc2900.h  lpc3180_nand_controller.c  lpc3180_nand_controller.h  mflash.c  mflash.h  mx3_nand.c  mx3_nand.h  nand.c  nand.h  nand_ecc.c  nand_ecc_kw.c  (+31 more)
src/gnulib/: Makefile.am  gl_anyhash1.h  gl_anyhash2.h  gl_anyhash_primes.h  gl_linkedhash_map.c  gl_linkedhash_map.h  gl_map.c  gl_map.h
src/helper/: #jim.c#  Makefile.am  align.h  base64.c  base64.h  bin2char.c  bin2char.sh  binarybuffer.c  binarybuffer.h  bitfield.h  bits.h  command.c  command.h  compiler.h  configuration.c  configuration.h  crc32.c  crc32.h  fileio.c  fileio.h  interpreter.c  interpreter.h  ioutil.c  ioutil.h  ioutil_stubs.c  jep106.c  jep106.h  jep106.inc  jim-eventloop.c  jim-eventloop.h  jim-nvp.c  jim-nvp.h  jim.c  jim.h  list.h  log.c  log.h  membuf.c  membuf.h  nvp.c  (+17 more)
src/interface/: Makefile.am  bitbang.c  bitbang.h  interface.h  interface_bitbang.c  interface_bitbang.h  interface_signal.c  interface_signal.h  signal.c  signal.h
src/jtag/: Makefile.am  adapter.c  adapter.h  amt_jtagaccel.c  arm-jtag-ew.c  at91rm9200.c  bitbang.c  bitbang.h  bitq.c  bitq.h  commands.c  commands.h  core.c  driver.c  driver.h  dummy.c  ep93xx.c  ft2232.c  ftd2xx.c  ftdi2232.c  gw16012.c  interface.c  interface.h  interfaces.c  interfaces.h  jlink.c  jtag.c  jtag.h  jtag_driver.c  minidriver.h  minidummy.c  ngw100.c  parport.c  presto.c  startup.tcl  swd.h  swim.c  swim.h  tcl.c  tcl.h  (+6 more)
src/m4/: gnulib-cache.m4  gnulib-comp.m4
src/pld/: Makefile.am  certus.c  certus.h  ecp2_3.c  ecp2_3.h  ecp5.c  ecp5.h  efinix.c  gatemate.c  gemini.c  gemini.h  gemini_bit.c  gemini_bit.h  gowin.c  intel.c  lattice.c  lattice.h  lattice_bit.c  lattice_bit.h  lattice_cmd.h  pld.c  pld.h  raw_bit.c  raw_bit.h  virtex2.c  virtex2.h  xilinx_bit.c  xilinx_bit.h
src/rtos/: ChibiOS.c  FreeRTOS.c  Makefile.am  ThreadX.c  chibios.c  chromium-ec.c  eCos.c  ecos.c  embKernel.c  embkernel.c  freertos.c  hwthread.c  linux.c  linux_header.h  mqx.c  nuttx.c  nuttx_header.h  riot.c  riscv_debug.c  riscv_debug.h  rtkernel.c  rtos.c  rtos.h  rtos_chibios_stackings.c  rtos_chibios_stackings.h  rtos_ecos_stackings.c  rtos_ecos_stackings.h  rtos_embkernel_stackings.c  rtos_embkernel_stackings.h  rtos_mqx_stackings.c  rtos_mqx_stackings.h  rtos_nuttx_stackings.c  rtos_nuttx_stackings.h  rtos_riot_stackings.c  rtos_riot_stackings.h  rtos_standard_stackings.c  rtos_standard_stackings.h  rtos_ucos_iii_stackings.c  rtos_ucos_iii_stackings.h  threadx.c  (+3 more)
src/rtt/: Makefile.am  rtt.c  rtt.h  tcl.c
src/server/: Makefile.am  gdb_server.c  gdb_server.h  httpd.c  httpd.h  httpd_stubs.c  ipdbg.c  ipdbg.h  rtt_server.c  rtt_server.h  server.c  server.h  server_stubs.c  startup.tcl  tcl_server.c  tcl_server.h  telnet_server.c  telnet_server.h
src/svf/: Makefile.am  Makefile.in  svf.c  svf.h
src/tcl/: README_ABOUT_TCL.txt  bitsbytes.tcl  commands.tcl  memory.tcl  mmr_helpers.tcl  readable.tcl
src/transport/: Makefile.am  transport.c  transport.h
src/xsvf/: Makefile.am  xsvf.c  xsvf.h
tcl/: memory.tcl  (+5 more)
testing/tcl_commands/: Makefile.am  test-drscan-command.cfg  test-irscan-command.cfg  test-jtag-execute-command.cfg  test-target-configure-cget-command.cfg  test-target-create-command.cfg  test-target-smp-command.cfg  utils.tcl
tools/syntacore/: Makefile.am  debug_adapter_reset.c  ide_cloak.tcl  openocd_run.exp
(+2083 files in other folders)
